apply local settings